platform/k8s/platform/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: platform
  namespace: dolphin
spec:
  host: platform
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
    # 熔断配置
    trafficPolicy:
      connectionPool:
        tcp:
          maxConnections: 1000
